force-app/main/default/objects/RE_FX_Rates__c/RE_FX_Rates__c.object-meta.xml
<CustomObject>
    <label>RE FX Rates</label>
    <nameField>
        <displayFormat>FXR-{000000}</displayFormat>
        <label>FX_Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE FX Rates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>