force-app/main/default/objects/RE_FX_Rates__c/fields/RE_Base_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Base_Unit__c</fullName>
    <label>Base Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>