force-app/main/default/objects/RE_FX_Rates__c/fields/RE_Country__c.field-meta.xml
<CustomField>
    <fullName>RE_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>FX_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>