force-app/main/default/objects/RE_FX_Rates__c/fields/RE_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_Country_Code__c</fullName>
    <formula>RE_Country__r.RE_Country_Code__c</formula>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>