force-app/main/default/objects/RE_FX_Rates__c/fields/RE_Forex_Rate__c.field-meta.xml
<CustomField>
    <fullName>RE_Forex_Rate__c</fullName>
    <label>Forex Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>