force-app/main/default/objects/RE_FX_Rates__c/fields/RE_Is_MTDWTD__c.field-meta.xml
<CustomField>
    <fullName>RE_Is_MTDWTD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MTDWTD</label>
    <type>Checkbox</type>
</CustomField>