force-app/main/default/objects/RE_FX_Rates__c/fields/RE_Pricing_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_Pricing_Date__c</fullName>
    <label>Published Date</label>
    <type>DateTime</type>
</CustomField>