force-app/main/default/objects/RE_FX_Rates__c/fields/RE_Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Quote_Name__c</fullName>
    <description>quote display name is stored</description>
    <label>Quote Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>