force-app/main/default/objects/RE_FX_Rates__c/fields/RE_Ric_Code__c.field-meta.xml
<CustomField>
    <fullName>RE_Ric_Code__c</fullName>
    <label>Ric Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>