force-app/main/default/objects/RE_FX_Rates__c/fields/RE_Tracker__c.field-meta.xml
<CustomField>
    <fullName>RE_Tracker__c</fullName>
    <label>Tracker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>D-1</fullName>
            </value>
            <value>
                <fullName>D-2</fullName>
            </value>
            <value>
                <fullName>D+1</fullName>
            </value>
            <value>
                <fullName>MTD</fullName>
            </value>
            <value>
                <fullName>WTD</fullName>
            </value>
            <value>
                <fullName>W-1</fullName>
            </value>
            <value>
                <fullName>W-2</fullName>
            </value>
            <value>
                <fullName>M-1</fullName>
            </value>
            <value>
                <fullName>M-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>