force-app/main/default/objects/RE_FX_Rates__c/fields/RE_Trade_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Trade_Type__c</fullName>
    <label>Trade Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Exchange Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>