force-app/main/default/objects/RE_FX_Rates__c/validationRules/RE_StopDuplicateFxCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>RE_StopDuplicateFxCreation</fullName>
    <active>false</active>
    <errorConditionFormula>WEEKDAY( TODAY() ) = 1 || WEEKDAY( TODAY() ) = 2</errorConditionFormula>
    <errorMessage>Error</errorMessage>
</ValidationRule>